# libanemo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_zh.md  flake.nix  meson.build
include/libcpu/: abstract_cpu.hh  cache.hh  cpu.hh  difftest.hh  event.hh  memory.hh  memory_staging.hh  riscv.hh  riscv_cpu.hh  riscv_cpu_system.hh  riscv_privilege_module.hh  riscv_privilege_module.hpp  riscv_user_core.hh  rv32i.hh  rv32i_cpu.hh  rv32i_cpu_nemu.hh  rv32i_cpu_staging.hh  rv32i_cpu_system.hh  rv32i_dependency.hh  rv64i.hh  rv64i_cpu_system.hh
include/libcpu/riscv/: decode_cache.hh  privilege_module.hh  riscv.hh  user_core.hh
include/libcpu/riscv_cpu/: cpu.hh  csr.hh  decode.hh  exec.hh  instructions.hh  memory.hh  riscv_cpu.hh
include/libsdb/: commandline.hh  expression.hh  sdb.hh  sdb_difftest.hh
include/libvio/: agent.hh  backend.hh  bus.hh  console.hh  frontend.hh  mtime.hh  ringbuffer.hh  width.hh
src/: difftest.cc  main.cc
src/examples/: quick_start.cc  riscv_minimal.cc
src/libcpu/: memory.cc  memory_staging.cc  riscv_cpu_system.cc  rv32i_cpu_staging.cc  rv32i_cpu_system.cc  rv64i_cpu_system.cc
src/libcpu/rv32i_cpu_system/: cpu.cc  exec.cc  memory.cc  trap.cc
src/libsdb/: commandline.cc  expression.cc
src/libvio/: bus.cc  frontend.cc
src/libvio/console/: backend_iostream.cc  frontend.cc
src/libvio/mtime/: backend_chrono.cc  frontend.cc
src/rv32i_cpu_system/: cpu.cc  csr.cc  decode.cc  exec.cc  instructions.cc  memory.cc  rv32i_nemu.cc  trap.cc
src/rv32i_nemu/: csr.cc  exec.cc  inst.cc  memory.cc  rv32i_nemu.cc
src/rv64i_cpu_system_ptrace/: cpu.cc
